MixLoader Initial Push

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,9 @@
 *.su
 *.idb
 *.pdb
+*.tlog
+*.log
+*.recipe
 
 # Kernel Module Compile Results
 *.mod*
@@ -53,3 +56,7 @@ dkms.conf
 
 # debug information files
 *.dwo
+
+
+#Custom
+.vs/
