Add PEBParsing functionality and include necessary headers; clean up unused variables

--- a/MixLoader/MixLoader.vcxproj
+++ b/MixLoader/MixLoader.vcxproj
@@ -135,6 +135,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="define.h" />
+    <ClInclude Include="PEBParsing.h" />
   </ItemGroup>
   <ItemGroup>
     <MASM Include="syscalls.asm">
